--- a/HeatingControl/index.html
+++ b/HeatingControl/index.html
@@ -38,7 +38,7 @@
         </div>
         <div class="row justify-content-center mt-4">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler mx-auto" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="jBGDiuWpflp1mxkg7kVpBl6ynzhcYAuyL2t0ys7M2XN6dyvgc2tneE1bw1mGw+NjBvzciC4VfD58IT/7+PxbhpliQcNbLd6dIkMbCxvPnuJk5lAgsvlMkX6ZumBuArHa">
+                <form action="authenticate.php" method="POST" class="mbr-form form-with-styler mx-auto" data-form-title="Form Name">
                     <div class="">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling
                             out the form!</div>
@@ -47,7 +47,7 @@
                     </div>
                     <div class="dragArea row">
                         <div class="col-lg-12 col-md-12 col-sm-12 form-group" data-for="name">
-                            <input type="password" name="password" placeholder="Name" data-form-field="name" class="form-control" value="" id="name-form6-l">
+                            <input type="password" name="password" placeholder="Password" data-form-field="name" class="form-control" value="" id="name-form6-l">
                         </div>
                         
                         
